--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,13 @@ footer {
         font-size: 1rem;
     }
 }
+
+#tsparticles {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    pointer-events: none;
+}
